// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connected Components React Plugin - Functional FunctionalComponentWithChildren.jsx snippet creation 1`] = `
Object {
  "description": "",
  "lang": "jsx",
  "snippet": "<MyComponent>
  {children}
</MyComponent>",
}
`;

exports[`Connected Components React Plugin - Functional FunctionalComponents.jsx snippet creation 1`] = `
Object {
  "description": "",
  "lang": "jsx",
  "snippet": "<MyComponent />",
}
`;

exports[`Connected Components React Plugin - Functional MultiExportFunctionalComponentWithChildren.jsx snippet creation 1`] = `
Object {
  "description": "Component 1 description. Only this one should be shown",
  "lang": "jsx",
  "snippet": "<MyComponent1>
  {children}
</MyComponent1>

<MyComponent2
  someParameter={PropTypes.string.isRequired}>
  {children}
</MyComponent2>",
}
`;
